--- a/css/alabaster.css
+++ b/css/alabaster.css
@@ -199,7 +199,7 @@ div.bodylogo {
 	font-family: 'Garamond', 'Georgia', serif;
 	font-weight: bold;
 	font-size: 300%;
-	text-decoration: underline;
+	text-decoration: none;
 	text-decoration-color: #ffffff;
 	margin: 30px 0px 30px 0px;
 	padding: 0;
